golang-github-eyedeekay-gosam (0.3.2.1) bionic; urgency=medium

  * Get rid of the debug directory, just move it into the source

 -- idk <hankhill19580@gmail.com>  Fri, 18 May 2019 18:12:21 -0500

golang-github-eyedeekay-gosam (0.3.2.0) bionic; urgency=medium

  * Enable persistent destinations
  * Make Base32 and Base64 addresses retrievable from client
  * bug fixes

 -- idk <hankhill19580@gmail.com>  Fri, 18 May 2019 18:12:21 -0500

golang-github-eyedeekay-gosam (0.1.1) bionic; urgency=medium

  * Incorporate all the recent bug-fixes and improvements and stabilize.

 -- idk <hankhill19580@gmail.com>  Fri, 15 Mar 2019 14:46:21 -0500

golang-github-eyedeekay-gosam (0.1.0+git20190221.2896c83ubuntu1+nmu2ubuntu1) bionic; urgency=medium

  * only run the offline tests by default

 -- idk <hankhill19580@gmail.com>  Thu, 28 Feb 2019 20:35:51 -0500

golang-github-eyedeekay-gosam (0.1.0+git20190221.2896c83ubuntu1+nmu2) bionic; urgency=medium

  [ idk ]
  * incorporate cryptix-debug without the counter
  * incorporate cryptix-debug without the counter
  * fix module

 -- idk <hankhill19580@gmail.com>  Thu, 28 Feb 2019 20:32:58 -0500

golang-github-eyedeekay-gosam (0.1.0+git20190221.2896c83ubuntu1+nmu1) bionic; urgency=medium

  * add sid
  *

 -- idk <hankhill19580@gmail.com>  Thu, 28 Feb 2019 18:52:01 -0500

golang-github-eyedeekay-gosam (0.1.0+git20190221.2896c83ubuntu1) bionic; urgency=medium

  [ idk ]
  * Update changelog for 0.1.0+git20190221.2896c83-1 release
  * add signature type support
  * Don't check version if handshake succeeds, just accept that OK is OK
  * Don't check version if handshake succeeds, just accept that OK is OK
  * make dialer context aware and avoid redundant session create's
  * make dialer context aware and avoid redundant session create's
  * correct CONTRIBUTING.md
  * correct CONTRIBUTING.md
  * correct CONTRIBUTING.md
  * explicitly et invalid initial lastaddr
  * remove 'commented-out' id
  * Initial release (Closes: TODO)

  [ idk ]