@@ -4,8 +4,8 @@ require github.com/eyedeekay/sam3 v0.32.2
 
 //replace github.com/eyedeekay/gosam v0.1.1-0.20190814195658-27e786578944 => github.com/eyedeekay/goSam ./
 
-replace github.com/eyedeekay/gosam v0.1.1-0.20190814195658-27e786578944 => ./
+replace github.com/eyedeekay/gosam v0.32.1 => ./
 
-replace github.com/eyedeekay/goSam v0.1.0 => ./
+replace github.com/eyedeekay/goSam v0.32.1 => ./
 
 go 1.13
