@@ -1,6 +1,7 @@
 golang-github-eyedeekay-gosam (0.3.2.1) bionic; urgency=medium
 
   * Get rid of the debug directory, just move it into the source
+  * Get rid of the old example, just use the one in the README
 
  -- idk <hankhill19580@gmail.com>  Fri, 18 May 2019 18:12:21 -0500
 
